--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
     textarea {
       width: 100%;
-      height: 120px;
+      height: 160px;
       margin-top: 15px;
     }
   </style>
@@ -46,7 +46,14 @@
 
   <script>
     function generarPrompt() {
-      const prompt = `Decime todas las promociones, descuentos, reintegros y beneficios vigentes hoy en todos los supermercados de Argentina (Carrefour, Coto, Día, Changomas, Disco, Vea, Jumbo, etc), incluyendo días especiales, tarjetas bancarias, billeteras virtuales y apps.`;
+      const prompt = `Informame en detalle y de forma completa sobre todas las promociones, descuentos, ofertas, reintegros y beneficios vigentes HOY en supermercados de Argentina (como Carrefour, Coto, Día, Changomas, Disco, Vea, Jumbo, entre otros). Incluí:
+- Días y horarios específicos
+- Descuentos con tarjetas bancarias y billeteras virtuales (como Cuenta DNI, MODO, etc)
+- Reintegros exclusivos de bancos
+- Ofertas destacadas en productos específicos
+- Promociones por apps o programas de fidelización
+- Beneficios para jubilados o grupos especiales
+Respondé con la información más actualizada posible y bien organizada por supermercado.`;
       document.getElementById("promptOutput").value = prompt;
     }
 
