--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 
   <script>
     function generarPrompt() {
-      const prompt = `Realizá una investigación exhaustiva y detallá TODAS las promociones, descuentos, ofertas, reintegros y beneficios vigentes HOY en supermercados de Argentina (Carrefour, Coto, Día, Changomas, Disco, Vea, Jumbo, etc). Incluí:
+      const prompt = `Hacé una investigación profunda, completa y actualizada. Informá todas las promociones vigentes HOY en supermercados de Argentina (Carrefour, Coto, Día, Changomas, Disco, Vea, Jumbo, etc), incluyendo:
 
-- Días y horarios específicos
-- Descuentos y reintegros de CADA banco (BBVA, Galicia, Nación, Provincia, Santander, Macro, ICBC, etc) en CADA supermercado
-- Beneficios con CADA billetera virtual (Cuenta DNI, MODO, Mercado Pago, Ualá, Naranja X, etc) en CADA supermercado
-- Ofertas destacadas por rubro (alimentos, bebidas, limpieza, perfumería, electro, etc)
-- Programas de fidelización y apps (Mi Carrefour, Coto Digital, Jumbo+, etc)
-- Promos especiales por segmento (jubilados, AUH, docentes, etc)
-- Topes de reintegro, condiciones, acumulabilidad y combinaciones posibles
-- Verificá también las promociones publicadas en el perfil de Instagram @jefadelahorro, ya que suele compartir beneficios actualizados y poco difundidos
+- Días y horarios
+- Descuentos y reintegros por banco y billetera virtual (Cuenta DNI, MODO, Mercado Pago, Ualá, Naranja X, etc), especificando en qué supermercados aplica cada uno
+- Rubros en oferta (alimentos, bebidas, limpieza, perfumería, electro, etc)
+- Programas de fidelización y apps (ej: Mi Carrefour, Coto Digital, Jumbo+)
+- Beneficios especiales (jubilados, AUH, docentes, etc)
+- Topes de reintegro, condiciones y combinaciones posibles
+- Promociones exclusivas online o por app
+- Revisá también https://www.instagram.com/jefadelahorro/?hl=es y otras fuentes relevantes
 
-Respondé con la información más actualizada posible, bien organizada por supermercado y sin omitir NINGÚN beneficio vigente.`;
+Respondé de forma clara, resumida, ordenada por supermercado y sin omitir ningún beneficio relevante.`;
       document.getElementById("promptOutput").value = prompt;
     }
 
