--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 
   <script>
     function generarPrompt() {
-      const prompt = `Hacé una investigación profunda, completa y actualizada. Informá todas las promociones vigentes esta semana en supermercados de Argentina (Carrefour, Coto, Día, Changomas, Disco, Vea, Jumbo, etc), incluyendo:
+      const prompt = `Investigá de forma exhaustiva, actualizada y bien clara todas las promociones y beneficios vigentes esta semana en supermercados de Argentina (Carrefour, Coto, Día, Changomas, Disco, Vea, Jumbo, etc). Incluí de forma organizada:
 
-- Días y horarios específicos (detalle por día si aplica: lunes, martes, etc.)
-- Descuentos y reintegros por banco y billetera virtual (Cuenta DNI, MODO, Mercado Pago, Ualá, Naranja X, etc), indicando en qué supermercado aplica cada uno
-- Rubros en oferta (alimentos, bebidas, limpieza, perfumería, electro, etc)
-- Programas de fidelización y apps (Mi Carrefour, Coto Digital, Jumbo+)
-- Beneficios especiales (jubilados, AUH, docentes, etc)
-- Topes de reintegro, condiciones y combinaciones posibles
-- Promociones exclusivas online o por app
-- Revisá también https://www.instagram.com/jefadelahorro/?hl=es y otras fuentes relevantes
+- Días y horarios exactos (detallar por día de la semana si aplica)
+- Descuentos y reintegros por banco y billetera virtual (Cuenta DNI, MODO, MP, Ualá, Naranja X, etc), especificando en qué súper aplica cada uno
+- Rubros en oferta (alimentos, limpieza, perfumería, bebidas, electro, etc)
+- Beneficios por apps y programas de fidelización (Mi Carrefour, Jumbo+, Coto Digital, etc)
+- Promociones especiales (jubilados, AUH, docentes, etc)
+- Topes, condiciones y si se pueden acumular
+- Promociones web o exclusivas por app
+- Consultá también https://www.instagram.com/jefadelahorro/?hl=es y otras fuentes confiables
 
-Respondé claro, ordenado por supermercado y día, con resúmenes concretos pero sin omitir beneficios importantes.`;
+Respondé con resúmenes breves, lo más claros posible, ordenado por supermercado y día, sin omitir nada relevante.`;
       document.getElementById("promptOutput").value = prompt;
     }
 
