--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 
   <script>
     function generarPrompt() {
-      const prompt = `Investigá de forma exhaustiva, actualizada y bien clara todas las promociones y beneficios vigentes esta semana en supermercados de Argentina (Carrefour, Coto, Día, Changomas, Disco, Vea, Jumbo, etc). Incluí de forma organizada:
+      const prompt = `Hacé una investigación completa, profunda y actualizada. Aclaración: las respuestas anteriores suelen ser confusas y omiten descuentos. Esta vez, respondé con máxima claridad y sin omitir NINGÚN beneficio vigente. Buscá todas las promociones en supermercados de Argentina (Carrefour, Coto, Día, Changomas, Disco, Vea, Jumbo, etc). Incluí:
 
-- Días y horarios exactos (detallar por día de la semana si aplica)
-- Descuentos y reintegros por banco y billetera virtual (Cuenta DNI, MODO, MP, Ualá, Naranja X, etc), especificando en qué súper aplica cada uno
+- Días y horarios exactos (por día de la semana)
+- Descuentos y reintegros por banco y billetera virtual (Cuenta DNI, MODO, MP, Ualá, Naranja X, etc), indicando en qué súper aplica cada uno
 - Rubros en oferta (alimentos, limpieza, perfumería, bebidas, electro, etc)
 - Beneficios por apps y programas de fidelización (Mi Carrefour, Jumbo+, Coto Digital, etc)
 - Promociones especiales (jubilados, AUH, docentes, etc)
-- Topes, condiciones y si se pueden acumular
-- Promociones web o exclusivas por app
-- Consultá también https://www.instagram.com/jefadelahorro/?hl=es y otras fuentes confiables
+- Topes, condiciones, acumulaciones y combinaciones posibles
+- Promos web o exclusivas por app
+- Revisá también https://www.instagram.com/jefadelahorro/?hl=es y otras fuentes confiables y actualizadas
 
-Respondé con resúmenes breves, lo más claros posible, ordenado por supermercado y día, sin omitir nada relevante.`;
+Respondé con resúmenes bien claros, organizados por supermercado y dentro de cada uno, listá los beneficios por DÍA DE LA SEMANA (lunes, martes, miércoles, etc). NO repitas info vaga ni general. Mostrá TODO lo vigente hoy y esta semana.`;
       document.getElementById("promptOutput").value = prompt;
     }
 
